<resources>
    <string name="app_name">Gonza app</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="login">Login</string>
    <string name="text_button_login">Login</string>
    <string name="dont_have_account">¿No tienes cuenta ? , </string>
    <string name="create_here"> crea una aqui</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Name</string>
    <string name="hint_user">User</string>
    <string name="hint_confirmPassword">Confirmar Contraseña</string>
    <string name="join_us">Unete</string>
    <string name="toolbar_title_createaccount">
       Crear cuenta
    </string>
    <string name="username_card">Gonzalo Gras Cantou</string>
    <string name="firstWord_card">Hace</string>
    <string name="timecard_card">4 dias</string>
    <string name="likenumbercard_card">10 Me Gusta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_home">Home</string>
    <string name="tab_">Profile</string>
    <string name="tab_profile">Perfil</string>
    <string name="secondword_detail">Me gusta</string>
    <string name="titleImage">Los simpsons borran a apu</string>
    <string name="lorem">is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently wit</string>
    <string name="transitioname_picture">transitioname_picture</string>
</resources>
